app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: cdc-salesforce
    app.kubernetes.io/name: cdc-salesforce
    app.openshift.io/runtime: quarkus
  name: cdc-salesforce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdc-salesforce
  template:
    metadata:
      labels:
        app: cdc-salesforce
    spec:
      containers:
      - name: cdc-salesforce
        imagePullPolicy: Always
        image: image-registry.openshift-image-registry.svc:5000/cdc-salesforce/cdc-salesforce:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
