app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cdc-salesforce
  name: cdc-salesforce
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cdc-salesforce
  sessionAffinity: None
  type: ClusterIP
