app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cdc-salesforce
  name: cdc-salesforce
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: cdc-salesforce
    weight: 100
